--- a/SimpleCiapiTest.csproj
+++ b/SimpleCiapiTest.csproj
@@ -34,30 +34,22 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="CIAPI, Version=1.0.238.0, Culture=neutral, PublicKeyToken=5dfdbaca97c75bb7, processorArchitecture=MSIL">
+    <Reference Include="CIAPI, Version=5.0.0.378, Culture=neutral, PublicKeyToken=5dfdbaca97c75bb7, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>packages\CIAPI.CS.1.0.238.0\lib\Net40\CIAPI.dll</HintPath>
-    </Reference>
-    <Reference Include="CityIndex.JsonClient, Version=1.0.238.0, Culture=neutral, PublicKeyToken=5dfdbaca97c75bb7, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>packages\CIAPI.CS.1.0.238.0\lib\Net40\CityIndex.JsonClient.dll</HintPath>
-    </Reference>
-    <Reference Include="Common.Logging, Version=2.0.0.0, Culture=neutral, PublicKeyToken=af08829b84f0328e, processorArchitecture=MSIL">
-      <HintPath>packages\CIAPI.CS.1.0.238.0\lib\Net40\Common.Logging.dll</HintPath>
+      <HintPath>packages\CIAPI.5.0.0-bleeding-378\lib\net35\Debug\CIAPI.dll</HintPath>
     </Reference>
     <Reference Include="DotNetClient_N2, Version=2.0.4168.21412, Culture=neutral, PublicKeyToken=8d72f58860ac9835, processorArchitecture=MSIL">
-      <HintPath>packages\CIAPI.CS.1.0.238.0\lib\Net40\DotNetClient_N2.dll</HintPath>
-    </Reference>
-    <Reference Include="Newtonsoft.Json, Version=3.5.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
-      <HintPath>packages\CIAPI.CS.1.0.238.0\lib\Net40\Newtonsoft.Json.dll</HintPath>
-    </Reference>
-    <Reference Include="StreamingClient, Version=1.0.238.0, Culture=neutral, PublicKeyToken=5dfdbaca97c75bb7, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>packages\CIAPI.CS.1.0.238.0\lib\Net40\StreamingClient.dll</HintPath>
     </Reference>
-    <Reference Include="StreamingClient.Lightstreamer, Version=1.0.238.0, Culture=neutral, PublicKeyToken=5dfdbaca97c75bb7, processorArchitecture=MSIL">
+    <Reference Include="Newtonsoft.Json, Version=4.5.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>packages\CIAPI.CS.1.0.238.0\lib\Net40\StreamingClient.Lightstreamer.dll</HintPath>
+      <HintPath>packages\Newtonsoft.Json.4.5.4\lib\net40\Newtonsoft.Json.dll</HintPath>
+    </Reference>
+    <Reference Include="Salient.ReflectiveLoggingAdapter.35">
+      <HintPath>packages\Salient.ReflectiveLoggingAdapter.3.1.0\lib\net35\Release\Salient.ReflectiveLoggingAdapter.35.dll</HintPath>
+    </Reference>
+    <Reference Include="Salient.ReliableHttpClient">
+      <HintPath>packages\CIAPI.5.0.0-bleeding-378\lib\net35\Debug\Salient.ReliableHttpClient.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
