--- a/packages.config
+++ b/packages.config
@@ -1,4 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="CIAPI.CS" version="1.0.238.0" />
+  <package id="CIAPI" version="5.0.0-bleeding-378" />
+  <package id="Newtonsoft.Json" version="4.5.4" />
+  <package id="Salient.ReflectiveLoggingAdapter" version="3.1.0" />
 </packages>
