--- a/SimpleCiapiTest.csproj
+++ b/SimpleCiapiTest.csproj
@@ -34,23 +34,25 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="CIAPI, Version=5.0.0.379, Culture=neutral, PublicKeyToken=5dfdbaca97c75bb7, processorArchitecture=MSIL">
+    <Reference Include="CIAPI, Version=6.0.1.396, Culture=neutral, PublicKeyToken=5dfdbaca97c75bb7, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>packages\CIAPI.5.0.0-bleeding-379\lib\net35\Debug\CIAPI.dll</HintPath>
+      <HintPath>packages\CIAPI.6.0.1-bleeding-396\lib\net35\Debug\CIAPI.dll</HintPath>
+    </Reference>
+    <Reference Include="CIAPI.Serializer">
+      <HintPath>packages\CIAPI.6.0.1-bleeding-396\lib\net35\Debug\CIAPI.Serializer.dll</HintPath>
     </Reference>
     <Reference Include="DotNetClient_N2, Version=2.0.4168.21412, Culture=neutral, PublicKeyToken=8d72f58860ac9835, processorArchitecture=MSIL">
-      <HintPath>packages\CIAPI.5.0.0-bleeding-379\lib\net35\Debug\DotNetClient_N2.dll</HintPath>
+      <HintPath>packages\CIAPI.6.0.1-bleeding-396\lib\net35\Debug\DotNetClient_N2.dll</HintPath>
     </Reference>
     <Reference Include="Newtonsoft.Json, Version=4.5.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>packages\Newtonsoft.Json.4.5.4\lib\net40\Newtonsoft.Json.dll</HintPath>
+      <HintPath>packages\Newtonsoft.Json.4.5.5\lib\net40\Newtonsoft.Json.dll</HintPath>
     </Reference>
     <Reference Include="Salient.ReflectiveLoggingAdapter.35">
       <HintPath>packages\Salient.ReflectiveLoggingAdapter.3.1.0\lib\net35\Release\Salient.ReflectiveLoggingAdapter.35.dll</HintPath>
     </Reference>
-    <Reference Include="Salient.ReliableHttpClient, Version=5.0.0.379, Culture=neutral, PublicKeyToken=de2ccdae144c2020, processorArchitecture=MSIL">
+    <Reference Include="Salient.ReliableHttpClient, Version=6.0.1.396, Culture=neutral, PublicKeyToken=de2ccdae144c2020, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>packages\CIAPI.5.0.0-bleeding-379\lib\net35\Debug\Salient.ReliableHttpClient.dll</HintPath>
+      <HintPath>packages\CIAPI.6.0.1-bleeding-396\lib\net35\Debug\Salient.ReliableHttpClient.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
