repro for issue 164

--- a/SimpleCiapiTest.csproj
+++ b/SimpleCiapiTest.csproj
@@ -68,6 +68,7 @@
     <Compile Include="LogInterception.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Repro164.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
